Adding some more documentation about the benchmarking utility